fix markdown wrap issue

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -16,7 +16,6 @@ html.dark .prose {
 .prose a {
   --at-apply: prose-link;
   font-weight: inherit;
-  white-space: inherit;
 }
 .prose strong {
   color: var(--fg-deep);
